--- a/config.properties
+++ b/config.properties
@@ -14,3 +14,9 @@ source=SELECT transname                     As Transformation \
 		ORDER BY 1 
 
 logText=SELECT log_field FROM log_transformation WHERE transname=? AND replaydate=?
+
+
+warning.Status=Status!=end
+warning.Output=Output=0
+warning.Errors=Errors>0
+
